--- a/.github/workflows/terraform-plan.yml
+++ b/.github/workflows/terraform-plan.yml
@@ -6,7 +6,7 @@ on:
 env:
   TF_CLOUD_ORGANIZATION: "akasa"
   TF_API_TOKEN: "${{ secrets.TF_API_TOKEN }}"
-  TF_WORKSPACE: "terraform-workflow"
+  TF_WORKSPACE: "github-action"
   CONFIG_DIRECTORY: "./"
 
 jobs:
